--- a/styles/site-plan-rafting.css
+++ b/styles/site-plan-rafting.css
@@ -5,14 +5,14 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #0000ff   ;
+  --secondary-color: #f1840f ;
+  --accent1-color: #750563;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: Oswald, "IM Fell French Canon";
+  --paragraph-font: Raleway, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
